<resources>
    <string name="app_name">lib</string>

    <!-- MAPOTEMPO URL -->
    <string name="mapotempo_url">https://www.mapotempo.com/en/free-trial-of-mapotempo-web/</string>
    <string name="mapotempo_help_url">https://www.mapotempo.com/en/contact-support-2/</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_up">Free trial</string>
    <string name="connexion_in_progress">Connection in progress...</string>
    <string name="remember_me">Remember me</string>
    <string name="advanced_login_parameter">Advanced login parameter</string>
    <string name="invalid_login_format">The login format is invalid, check spaces.</string>
    <string name="fleet_server_compatibility_error">Your application need to be upgrade to communicate with fleet server.</string>
    <string name="preload_modal_title">Confirm the map download</string>
    <string name="preload_modal_desc">Download map locally will use your device\'s memory, make sure you have enough place</string>
    <string name="preload_modal_ok">Download</string>
    <string name="preload_modal_cancel">Cancel</string>
    <string name="preload_modal_title_no_connection">No connection available</string>
    <string name="preload_modal_desc_no_connection">To download the map you must enabled any connection (Wifi, Mobile data..)</string>

    <!-- Strings related to alert dialogs -->
    <string name="login_error_title">Sign in error</string>
    <string name="login_error_short_text">Connection can\'t be established</string>
    <string name="login_error_invalid">Either password and login doesn\'t match, please try again.</string>
    <string name="login_error_server">Verify data connexion, if problem persist please contact support.</string>

    <!-- USER DATA PREF -->
    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="save_signature_success">Save Signature Success</string>
    <string name="save_signature_fail">Save Signature Fail</string>

    <!-- Main Menu -->
    <string name="map">Map</string>
    <string name="tracking">Tracking</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="offline_map">Offline Maps</string>

    <!-- Edit Menu -->
    <string name="edit_address">Survey the address</string>
    <string name="edit_location">Survey the position</string>
    <string name="reset_location">Delete the surveyed location</string>
    <string name="reset_address">Reset</string>
    <string name="validate_location">Save</string>

    <!-- Location/Tracknig -->
    <string name="Activate">Activate</string>
    <string name="enable_location_services">Please enable Location Services"</string>
    <string name="location_is_disabled_long_text">You currently have all Location Services for this device or application disabled. Please enable them in Settings..</string>
    <string name="connection_settings">Connection settings.</string>
    <string name="close">Close</string>
    <string name="explaination_location_permission">This permission is required to activate the location tracking</string>
    <string name="disabled_permission">You have disabled permission</string>
    <string name="map_deleted">Offline Maps Deleted</string>
    <string name="delete_offline_map_error">Error on Deletion</string>
    <string name="no_offline_maps">No Offline Maps Detected</string>
    <string name="loading_completed">Loading Completed.</string>

    <!-- Mission List -->
    <string name="no_available_mission">No missions available</string>

    <!-- Mission Detail -->
    <string name="planned">"Planned: "</string>
    <string name="visit_duration">"Visit duration: "</string>
    <string name="time_windows">"Time Windows"</string>
    <string name="directions">"directions"</string>

    <!-- Settings -->
    <string name="profil">Profil</string>
    <string name="general_settings">General settings</string>
    <string name="night_mode">"Night mode"</string>
    <string name="mobile_data">"Mobile data"</string>
    <string name="mobile_data_entry">"Allow mobile data synchronization"</string>
    <string name="night">"Night"</string>
    <string name="day">"Day"</string>
    <string name="automatic">"Automatic"</string>
    <string name="automatic_data_update">"Automatic data update"</string>
    <string name="data_settings">Data settings</string>
    <string name="map_settings">Map settings</string>
    <string name="map_zoom_button">"Map zoom button"</string>
    <string name="map_current_position">"Map current position"</string>
    <string name="delete_cache">Remove cached</string>
    <string name="preload_action">Offline Map</string>
    <string name="preload_description">Enable the possibility to download maps in the current device</string>
    <string name="preload_info_title">Last download Date</string>
    <string name="preload_info_desc">No offline map downloaded yet</string>
    <string name="preload_consumption_title">Memory Consumption</string>
    <string name="preload_consumption_default_desc">0 Mo</string>
    <string name="preload_action_delete_title">Delete Map downloaded</string>
    <string name="preload_action_delete_desc">Remove all data downloaded on the current device</string>
    <string name="preload_map_consumption_prefix">Data Size:</string>

    <!-- Time -->
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>

    <!-- Mission address edition -->
    <string name="street">Street</string>
    <string name="detail">Detail</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>

</resources>
