<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/main_menu"
      android:clickable="true"
      android:theme="@style/MapotempoTheme">

  <group
      android:id="@+id/group_route"
      android:clickable="true">

    <item
        android:id="@+id/main"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/to_do"
        android:checkable="true"
        android:checked="true"/>

    <item
        android:id="@+id/archived"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/archive"
        android:checkable="true"/>

  </group>

  <group
      android:id="@+id/group_geo"
      android:clickable="true">

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map"/>

    <item
        android:id="@+id/tracking_status"
        android:icon="@drawable/ic_tracking_black_24dp"
        android:title="@string/tracking"
        app:actionLayout="@layout/switch_tracking_item"/>

  </group>

  <group android:id="@+id/group_settings">

    <!--<item-->
    <!--android:id="@+id/sync"-->
    <!--android:icon="@drawable/ic_sync_black_24dp"-->
    <!--android:title="@string/synchronization"-->
    <!--app:actionLayout="@layout/switch_item" />-->

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"/>

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help"/>

  </group>

  <group android:id="@+id/group_logout">

    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:state_pressed="true"
        android:title="@string/sign_out"/>

  </group>

</menu>
