<?xml version="1.0" encoding="utf-8"?><!-- This view require MapotempoTheme or MapotempoTheme_Night.
    The theme is set in the corresponding fragment. -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:theme="@style/MapotempoTheme"
    tools:context="com.mapotempo.lib.login.LoginFragment">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_city"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/login_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        tools:context="com.mapotempo.lib.login.LoginFragment">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_text_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_progress"
            android:text="@string/connexion_in_progress"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGrey"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context="com.mapotempo.lib.login.LoginFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/logo_horizontal_margin"
            android:layout_marginTop="@dimen/logo_vertical_margin_top"
            android:layout_marginBottom="@dimen/logo_vertical_margin_bottom"
            android:src="@drawable/ic_logo_mapo_hd_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_internal_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_internal_vertical_margin"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_email_black_24dp"
                    android:tint="@color/colorDarkGrey" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorDarkGrey">

                    <EditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_login"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHighlight="@color/colorDarkGrey"
                        android:textColorHint="@color/colorDarkGrey" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_internal_vertical_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="12dp"
                    android:src="@drawable/ic_lock_black_24dp"
                    android:tint="@color/colorDarkGrey" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorDarkGrey">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <CheckBox
                android:id="@+id/remember_logs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:padding="16dp"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/login_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_internal_vertical_margin"
                android:text="@string/action_sign_in"
                android:textColor="?buttonLoginTextColor"
                android:textStyle="bold"
                android:background="?buttonLogin" />

            <Button
                android:id="@+id/login_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_internal_vertical_margin"
                android:text="@string/action_sign_up"
                android:textColor="?buttonLoginTextColor"
                android:textStyle="bold"
                android:background="?buttonLogin" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/advanced_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_black_24dp"
        android:backgroundTint="@android:color/transparent"
        android:background="@android:color/transparent"
        android:tint="@color/colorDarkGrey"
        android:clickable="true"
        android:layout_margin="15dp"
        app:layout_anchor="@id/login_background"
        app:layout_anchorGravity="bottom|right" />

</android.support.design.widget.CoordinatorLayout>
